# PETAce

./: .clang-format  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
cmake/: EnableCXX17.cmake  EnableDebugFlags.cmake  ExternalPybind11.cmake  PETAce-Duet.cmake  PETAce-Network.cmake  PETAce-SetOps.cmake  PETAce-Solo.cmake  PETAce-Verse.cmake  PETAceCustomMacros.cmake
example/: README.md
example/securenumpy/: linear_regression.py  logistic_regression.py
example/setops/: ecdh_psi.py
python/: CMakeLists.txt  README.md  requirements.txt  setup.py
python/petace/: .coveragerc  pytest.ini  version.py
python/petace/duet/: __init__.py  _type.py  exception.py  vm.py
python/petace/network/: __init__.py
python/petace/secureml/: __init__.py  activation_function.py
python/petace/securenumpy/: __init__.py  array_creation.py  array_manipulation.py  exceptions.py  linalg.py  math.py  sort_search.py  statistics.py
python/petace/securenumpy/core/: __init__.py  broad_cast.py  index_utils.py  init.py  securearray.py
python/petace/securesql/: __init__.py  aggregate.py
python/petace/setops/: __init__.py  pjc.py  psi.py
python/petace/tests/: process.py  utils.py
python/petace/tests/duet/: test_vm.py
python/petace/tests/network/: test_network.py
python/petace/tests/secureml/: test_activation_function.py
python/petace/tests/securenumpy/test_array/: test_arith_op.py  test_array.py  test_attributes.py  test_comp_op.py  test_getitem.py  test_logical_op.py  test_matmul.py  test_method.py  test_quick_sort.py  test_reveal.py  test_setitem.py  test_unary_op.py
python/petace/tests/securenumpy/test_array_creation/: test_create.py  test_fromshare.py  test_ranges.py
python/petace/tests/securenumpy/test_array_manipulation/: test_concatenate.py  test_reshape.py  test_stack.py
python/petace/tests/securenumpy/test_linalg/: test_dot.py  test_inner.py
python/petace/tests/securenumpy/test_math/: test_max_min.py  test_prod.py  test_sum.py
python/petace/tests/securenumpy/test_sort/: test_arg.py  test_sort.py  test_where.py
python/petace/tests/securenumpy/test_statistic/: test_mean_average.py  test_ptp.py
python/petace/tests/securesql/: test_aggregate.py
python/petace/tests/setops/: __init__.py  test_setops.py
python/warpper/: CMakeLists.txt
python/warpper/duet/: CMakeLists.txt  duet_py_vm.cpp  duet_py_vm.h  duet_py_warpper.cpp
python/warpper/network/: CMakeLists.txt  network_py_warpper.cpp
python/warpper/setops/: CMakeLists.txt  setops_py_psi.cpp  setops_py_psi.h  setops_py_warpper.cpp
